app/dashboard/form/FormPage.module.css
.template1 {
    height: 90vh;
    overflow: scroll;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(228, 233, 255);
}

.portfolioForm {
    height: 90%;
    width: 90%;
    max-width: 600px;
    padding: 1.5rem;
    border-radius: 1rem;
    background: linear-gradient(135deg,
            rgba(146, 166, 255, 0.8) 0%,
            rgba(137, 210, 255, 0.4) 50%,
            rgba(146, 166, 255, 0.8) 100%);
    backdrop-filter: blur(8px);
    -webkit-backdrop-filter: blur(8px);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
    overflow-y: auto;
    color: white;
}

.stepTitle {
    text-align: center;
    font-size: 1.8rem;
    letter-spacing: 0.1rem;
    font-weight: bold;
    margin-bottom: 1.5rem;
    color: rgb(42, 39, 129);
    text-shadow: -1px 0px 2px rgba(42, 39, 129, 0.4);
}

.formSection {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

.formSection p{
    color: rgb(20, 54, 101);
}

.formInput,
.formTextarea {
    width: 90%;
    padding: 0.5rem 0.75rem;
    border-radius: 12px;
    border: 1px solid rgba(0, 0, 0, 0.3);
    color: rgb(0, 0, 0);
    text-shadow: -3px 1px 1px solid black;
    font-size: 1rem;
    background-color: rgba(255, 255, 255, 0.2);
}

.uploadImage{
    display: flex;
    width: 90%;
    gap: 0.5rem;
    border-radius: 12px;
    color: rgb(0, 0, 0);
    text-shadow: -3px 1px 1px solid black;
    font-size: 1rem;
    background-color: rgba(255, 255, 255, 0.2);
}

.imageInput{
    background-color: rgba(255, 255, 255, 0.2);
    font-size: 0.8rem;
}

.formInput:focus,
.formTextarea:focus {
    border: 1px solid black;
    background-color: rgba(255, 255, 255, 0.3);
}

.formTextarea {
    height: 100px;
    resize: vertical;
}

.projectEntry {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    gap: 1rem;
}

.formNav {
    display: flex;
    width: 90%;
    justify-content: space-between;
}

.btnNext,
.btnPrev,
.btnAdd,
.btnSubmit,
.btnUpload {
    padding: 0.2rem 0.4rem;
    width: fit-content;
    font-size: 1rem;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    height: 2.5rem;
    min-width: 5rem;
    color: white;
    background-color: rgb(47, 85, 138);
}


.btnNext:hover,
.btnPrev:hover {
    background-color: rgb(20, 54, 101);
}

.btnUpload{
    background-color: rgb(47, 106, 138);
    min-width: fit-content;

}

.btnAdd {
    background-color: rgb(47, 106, 138);
    min-width: 6rem;
}


.btnAdd:hover,
.btnUpload:hover{
    background-color: rgb(32, 82, 109);

}

.btnDelete {
    cursor: pointer;
    padding: 0.2rem 0.5rem;
    border-radius: 20px;
    background-color: rgb(44, 95, 115);
}

.btnSubmit {
    background-color: #008000;
    color: #fff;
}

.skillInputWrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 90%;
    gap: 0.5rem;
}

.skillList {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    margin-top: 1rem;
}

.skillChip {
    background-color: #f0f0f0;
    padding: 0rem 0.6rem;
    border-radius: 25px;
    font-size: 0.9rem;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgb(44, 95, 115);
}

.removeSkill {
    background: none;
    border: none;
    margin-left: 0.2rem;
    cursor: pointer;
    font-size: 1.5rem;
    color: red;
}

.dots::after {
  content: '';
  display: inline-block;
  width: 1em;
  text-align: left;
  animation: dots 1.5s steps(4, end) infinite;
}

@keyframes dots {
  0%   { content: ''; }
  25%  { content: '.'; }
  50%  { content: '..'; }
  75%  { content: '...'; }
  100% { content: ''; }
}

